--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,8 +3,9 @@ whi_rc_bridge:
   twist_topic: /cmd_vel
   max_linear: 1.0 #m/s
   max_angular: 1.57 #rad/s
+  damp_angular: true
   channels_name: ["left_right", "forth_back", "throttle", "active"]
-  channels_offset: [-1, -1, 0, 0]
+  channels_offset: [-1, -10, 2, 0]
   hardware: i2c
   i2c:
     bus_addr: 1
