--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,12 +6,16 @@ whi_rc_bridge:
   damp_angular: true
   motion_state_topic: motion_state
   cancel_goal_topic: move_base/cancel
-  channels_name: ["left_right", "forth_back", "throttle", "active"]
-  channels_offset: [-1, -10, 2, -40]
-  print_raw: false
-  hardware: i2c
+  # for T8S(BT)
+  # channels_name: ["left_right", "forth_back", "throttle", "active"]
+  # channels_offset: [-1, -10, 2, -40]
+  # for T8FB(BT)
+  channels_name: ["left_right", "forth_back", "throttle", "dummy", "dummy", "active"]
+  channels_offset: [-1, -10, 2, 0, 0, -40]
+  print_raw: true
+  hardware: serial
   i2c:
     bus_addr: 1
     device_addr: 8
   serial:
-    device: /dev/ttyTHS1
+    device: /dev/ttyUSB0
