revise config for T8FB

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,9 +10,9 @@ whi_rc_bridge:
   # channels_name: ["left_right", "forth_back", "throttle", "active"]
   # channels_offset: [-1, -10, 2, -40]
   # for T8FB(BT)
-  channels_name: ["left_right", "forth_back", "throttle", "dummy", "dummy", "active"]
-  channels_offset: [-1, -10, 2, 0, 0, -40]
-  print_raw: false
+  channels_name: ["left_right", "forth_back", "throttle", "dummy", "dummy", "dummy", "active"]
+  channels_offset: [-1, -10, 2, 0, 0, 0, -40]
+  print_raw: true
   hardware: serial
   i2c:
     bus_addr: 1
