add clear fault func

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,17 +5,18 @@ whi_rc_bridge:
   max_angular: 1.57 #rad/s
   damp_angular: true
   motion_state_topic: motion_state
+  rc_state_topic: rc_state
   cancel_goal_topic: move_base/cancel
   # for T8S(BT)
   # channels_name: ["left_right", "forth_back", "throttle", "active"]
   # channels_offset: [-1, -10, 2, -40]
   # for T8FB(BT)
-  channels_name: ["left_right", "forth_back", "throttle", "dummy", "dummy", "dummy", "active"]
+  channels_name: ["left_right", "forth_back", "throttle", "dummy", "dummy", "clear_error", "active"]
   channels_offset: [-1, -10, 2, 0, 0, 0, -40]
-  print_raw: true
+  print_raw: false
   hardware: serial
   i2c:
     bus_addr: 1
     device_addr: 8
   serial:
-    device: /dev/ttyUSB0
+    device: /dev/rc
