--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 whi_rc_bridge:
   frequency: 20.0
-  twist_topic: /cmd_vel
+  twist_topic: /$(arg robot_name)/cmd_vel
   max_linear: 1.0 #m/s
   max_angular: 1.57 #rad/s
   damp_angular: true
